--- a/styleLogin.css
+++ b/styleLogin.css
@@ -15,6 +15,8 @@ body { background-color: grey}
 	text-decoration:underline;
 	}
 
+//.entrada {text-align:center;}
+
 .subtitulo{
 	padding:10px;
 	text-align:center;
